<resources>
    <string name="app_name">SQLiteDatabase</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_class">Enter class</string>
    <string name="roll_no">Enter roll no</string>
    <string name="enter_marks">Enter marks</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="roll_no_">Roll no</string>
    <string name="cl_name">Class name</string>
    <string name="marks">Marks</string>
</resources>